[package]
name = "wasm_test"
version = "0.1.0"
authors = ["zhfelon1 <zhfelon@qq.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "default_fonts"]

# If set, egui will use `include_bytes!` to bundle some fonts.
# If you plan on specifying your own fonts you may disable this feature.
default_fonts = ["egui/default_fonts"]


[dependencies]
web-sys = "0.3.53"
wasm-bindgen = "0.2.63"
log = "0.4.6"
wasm-logger = "0.2.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

#时间库 代替标准库的time
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
getrandom = { version = "0.2", features = ["js"] }
winit = "0.26.1"
image = "0.24.1"

#ui
egui = {package = "egui", path = "./egui/egui"}
egui_web = {package = "egui_web", path = "./egui/egui_web"}
epi = {package = "epi", path = "./egui/epi"}
epaint = {package = "epaint", path = "./egui/epaint"}
egui-winit = {package = "egui-winit", path = "./egui/egui-winit"}
glow = "0.11.2"

lazy_static = "1.4.0"
dot_vox = "4.0"
ron = { version = "0.7", default-features = false }
assets_manager = {version = "0.7", features = ["bincode", "ron", "json"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
